// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2 renders correctly with \`as\` 1`] = `
<DocumentFragment>
  <p
    class="h2 alignLeft singleLine"
  >
    This is a p
  </p>
</DocumentFragment>
`;

exports[`H2 should render correctly 1`] = `
<DocumentFragment>
  <h2
    class="h2 alignLeft singleLine"
  >
    This is H2
  </h2>
</DocumentFragment>
`;
